# Out-of-band-Deployment-Monitor

./: .gitignore  README.md
agent/: CMakeLists.txt
agent/config/: agent.yaml  vdt-monitor.rules
agent/include/: audit_watcher.h  config.h  event.h  event_queue.h  event_serializer.h  logger.h  network_client.h  session_tracker.h
agent/src/: audit_watcher.cpp  config.cpp  event.cpp  event_queue.cpp  event_serializer.cpp  logger.cpp  main.cpp  network_client.cpp  session_tracker.cpp
agent/systemd/: vdt-agent.service
agent/tests/: test_audit_watcher.cpp  test_config.cpp  test_event_helper.cpp  test_event_queue.cpp  test_event_serializer.cpp  test_session_tracker.cpp
central_service/: .dockerignore  Dockerfile  config.yaml  main.py  requirements.txt
central_service/api/: events.py
central_service/schemas/: event_schema.py
central_service/services/: __init__.py  elasticsearch_client.py  ip_checker.py  jenkins_client.py  reconciliation_engine.py  remediation_client.py
deploy/: docker-compose.yml
deploy/grafana/dashboards/: vdt_dashboard.json
deploy/grafana/provisioning/alerting/: alerting.yaml
deploy/grafana/provisioning/dashboards/: dashboard.yaml
deploy/grafana/provisioning/datasources/: es.yaml
